name:                aoc
version:             1.0
synopsis:            Advent of Code
homepage:            https://github.com/dsvensson/adventofcode2017
author:              Daniel Svensson
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Day1, Day2, Day4, Day5
  build-depends:       base >= 4.7 && < 5
                     , containers
  default-language:    Haskell2010

test-suite aoc-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       Day1Spec
                     , Day2Spec
                     , Day4Spec
                     , Day5Spec
  build-depends:       base
                     , aoc
                     , hspec
                     , string-qq
                     , text
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

benchmark aoc-bench
  type:             exitcode-stdio-1.0
  hs-source-dirs:   src, bench
  main-is:          Main.hs
  build-depends:    base
                  , aoc
                  , containers
                  , criterion
                  , strict
                  , text
  ghc-options:      -Wall -O2
  default-language: Haskell2010